--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Hello, my name is Kwok Chun Hei. This is my first website create with Visual Studio Code.</p>
     </main>
     <footer>
-        <p>&copy; Kwok Chun Hei, 2025</p>
+        <p>Kwok Chun Hei, 2025</p>
     </footer>
 </body>
 </html>
