--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Individual Project</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
         <h1>Welcome to my website!</h1>
     </header>
     <main>
-        <p>Hello, my name is Kwok Chun Hei. This is my first website create with Visual Studio Code.</p>
+        <p>This is my first website create with Visual Studio Code.</p>
+        <p>Hello, my name is Kwok Chun Hei.</p>
     </main>
     <footer>
-        <p>Kwok Chun Hei, 2025</p>
+        <p>&copy; Kwok Chun Hei, 2025</p>
     </footer>
 </body>
 </html>
