--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Individual Project</title>
+    <title>Personal Website</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -12,8 +12,33 @@
     </header>
     <main>
         <p>This is my first website create with Visual Studio Code.</p>
-        <p>Hello, my name is Kwok Chun Hei.</p>
+        <p>Hello, my name is Kwok Chun Hei. Through this website, you will have better understanding about me.</p>
+        
     </main>
+    
+    <table border="1">
+    <tr>
+        <th>Important Years</th>
+        <th>Things Happened</th>
+    </tr>
+    <tr>
+        <td>2009</td>
+        <td>Entered primary school</td>
+    </tr>
+    <tr>
+        <td>2015</td>
+        <td>Entered secondary school</td>
+    </tr>
+        <tr>
+        <td>2021</td>
+        <td>Graduated from Applied Learning course</td>
+    </tr>
+        <tr>
+        <td>2022</td>
+        <td>Entered UOWCHK(Higher Diploma)</td>
+    </tr>
+</table>
+
     <footer>
         <p>&copy; Kwok Chun Hei, 2025</p>
     </footer>
