--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <p>Hello, my name is Kwok Chun Hei. Through this website, you will have better understanding about me.</p>
         
     </main>
-    
+
+    <h2>About Me</h2>
+    <p>I am currently a student from University of Wollengong College Hong Kong, I am studying at Higher Diploma in Creative Media Production. </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/fBWaaEp5xRA" frameborder="0" allowfullscreen></iframe>
+
     <table border="1">
     <tr>
         <th>Important Years</th>
