--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     </tr>
 </table>
 
+    <h2>My Works</h2>
+    <p>I am good at story thinking, I enjoy writing storys and scripts, I can create a large worldview in every stories.</p>
+    <p>Here is one of my story script:</p>
+    
     <footer>
         <p>&copy; Kwok Chun Hei, 2025</p>
     </footer>
