--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <p>I am currently a student from University of Wollengong College Hong Kong, I am studying at Higher Diploma in Creative Media Production. </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/fBWaaEp5xRA" frameborder="0" allowfullscreen></iframe>
 
+    <p>I choose Creative Media as my programme since I have creative thinking, Creative Media fit my skills.</p> 
+
+    Life is full of ups and downs, here are the years which are important to me:
     <table border="1">
     <tr>
         <th>Important Years</th>
@@ -35,7 +38,7 @@
     </tr>
         <tr>
         <td>2021</td>
-        <td>Graduated from Applied Learning course</td>
+        <td>Graduated from Applied Learning course in HKDI</td>
     </tr>
         <tr>
         <td>2022</td>
@@ -44,9 +47,15 @@
 </table>
 
     <h2>My Works</h2>
-    <p>I am good at story thinking, I enjoy writing storys and scripts, I can create a large worldview in every stories.</p>
-    <p>Here is one of my story script:</p>
-    
+    <p>I am good at story writing, I enjoy writing storys and scripts, I can create a large worldview in every stories.</p>
+        <p>Here is one of my story script:</p>
+        <img src="My_Work_Script.jpeg" class="mx-auto d-block" alt="story-script">
+
+    <p>Besides writing, I also helped acting for micro movies. The most unforgettable experience was playing as the protagonist of my Final Year Project movie with groupmates.</p>
+    <p>My acting roles in Final Year Project micro movie — A Fleeting Echo(Watch on YouTube):</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/zG_t9r1aRYw" frameborder="0" allowfullscreen></iframe>
+
+    <h2>My Hobbies</h2>
     <footer>
         <p>&copy; Kwok Chun Hei, 2025</p>
     </footer>
