--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +10,10 @@
     <header>
         <h1>Welcome to my website!</h1>
     </header>
+
     <main>
         <p>This is my first website create with Visual Studio Code.</p>
         <p>Hello, my name is Kwok Chun Hei. Through this website, you will have better understanding about me.</p>
-        
     </main>
 
     <h2>About Me</h2>
@@ -56,6 +56,9 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/zG_t9r1aRYw" frameborder="0" allowfullscreen></iframe>
 
     <h2>My Hobbies</h2>
+    <p>As I have mentioned, I enjoy writing storys and scripts.</p> 
+    <p>Same as other teenagers, I love playing computer games, but not as often as secondary school anymore.</p>
+
     <footer>
         <p>&copy; Kwok Chun Hei, 2025</p>
     </footer>
