--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h2>My Works</h2>
     <p>I am good at story writing, I enjoy writing storys and scripts, I can create a large worldview in every stories.</p>
         <p>Here is one of my story script:</p>
-        <img src="My_Work_Script.jpeg" class="mx-auto d-block" alt="story-script">
+        <a href="https://docs.google.com/document/d/1JWFSCEPgBh6Ix-3AAmGac_HoGnYZ3fM2AsbTa3P0lSY/edit?usp=drive_link">All Tuned Out story script</a>
 
     <p>Besides writing, I also helped acting for micro movies. The most unforgettable experience was playing as the protagonist of my Final Year Project movie with groupmates.</p>
     <p>My acting roles in Final Year Project micro movie — A Fleeting Echo(Watch on YouTube):</p>
@@ -58,7 +58,8 @@
     <h2>My Hobbies</h2>
     <p>As I have mentioned, I enjoy writing storys and scripts.</p> 
     <p>Same as other teenagers, I love playing computer games, but not as often as secondary school anymore.</p>
-
+    <p>During long holidays, I watch movies. </p>
+    
     <footer>
         <p>&copy; Kwok Chun Hei, 2025</p>
     </footer>
