--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h2>My Hobbies</h2>
     <p>As I have mentioned, I enjoy writing storys and scripts.</p> 
     <p>Same as other teenagers, I love playing computer games, but not as often as secondary school anymore.</p>
-    <p>During long holidays, I watch movies. </p>
+    <p>During long holidays, I watch movies. There are some best, impressive movies I have ever watched.</p>
     
     <footer>
         <p>&copy; Kwok Chun Hei, 2025</p>
