--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     <h2>My Hobbies</h2>
     <p>As I have mentioned, I enjoy writing storys and scripts.</p> 
     <p>Same as other teenagers, I love playing computer games, but not as often as secondary school anymore.</p>
-    <p>During long holidays, I watch movies. There are some best, impressive movies I have ever watched. Sush as A Better Tomorrow, Requiem For A Dream, Inception.</p>
+    <p>During long holidays, I watch movies. There are some best, impressive movies I have ever watched.</p>
+    <p>Besides watching movies, I am more likely to watch animation/TV series since their duration are not too long and you can watch them at home anytime.</p>
     
     <footer>
         <p>&copy; Kwok Chun Hei, 2025</p>
