--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -60,7 +61,31 @@
     <p>Same as other teenagers, I love playing computer games, but not as often as secondary school anymore.</p>
     <p>During long holidays, I watch movies. There are some best, impressive movies I have ever watched.</p>
     <p>Besides watching movies, I am more likely to watch animation/TV series since their duration are not too long and you can watch them at home anytime.</p>
-    
+    <style>
+    .fixed-size {
+        width: 100%; 
+        height: 200px; 
+        object-fit: cover; 
+    }
+    </style>
+    <div class="container">
+        <div class="container"></div>
+    <div class="row">
+        <div class="col-sm-4">
+            <img src="firstview.png" class="img-fluid rounded" alt="computer-games">
+            <p class="text-center fw-bold">Surviv.io is my most favourite computer game.</p>
+        </div>
+        <div class="col-sm-4">
+            <img src="Inception Poster.jpg" class="img-fluid rounded" alt="movie">
+            <p class="text-center fw-bold">Inception is one of my most favourite movies.</p>
+        </div>
+        <div class="col-sm-4">
+            <img src="TADC.jpeg" class="img-fluid rounded" alt="animation-series">
+            <p class="text-center fw-bold">The Amazing Digital Circus is one of my most favourite animation series.</p>
+        </div>
+    </div>
+</div>
+
     <footer>
         <p>&copy; Kwok Chun Hei, 2025</p>
     </footer>
