--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
     }
     </style>
     <div class="container">
-        <div class="container"></div>
     <div class="row">
         <div class="col-sm-4">
             <img src="firstview.png" class="img-fluid rounded" alt="computer-games">
             <p class="text-center fw-bold">Surviv.io is my most favourite computer game.</p>
         </div>
         <div class="col-sm-4">
-            <img src="Inception Poster.jpg" class="img-fluid rounded" alt="movie">
+            <img src="Inception-Poster.jpg" class="img-fluid rounded" alt="movie">
             <p class="text-center fw-bold">Inception is one of my most favourite movies.</p>
         </div>
         <div class="col-sm-4">
