--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <style>
     .fixed-size {
         width: 100%; 
-        height: 200px; 
+        height: 260px; 
         object-fit: cover; 
     }
     </style>
@@ -75,7 +75,7 @@
             <p class="text-center fw-bold">Surviv.io is my most favourite computer game.</p>
         </div>
         <div class="col-sm-4">
-            <img src="Inception-Poster.jpg" class="img-fluid rounded" alt="movie">
+            <img src="Inception-Poster.jpg" class="img-fluid rounded fixed-size" alt="movie">
             <p class="text-center fw-bold">Inception is one of my most favourite movies.</p>
         </div>
         <div class="col-sm-4">
